--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
 
   <body>
     <%= link_to "Sign Up", new_user_registration_path %>
+    <% if user_signed_in? %>
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+    <% end %>
+
+    <% flash.each do |key, value| %>
+      <%= value %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
