--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
       <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
     <% end %>
 
+    <% if !user_signed_in? %>
+      <%= link_to "Sign In", new_user_session_path %>
+    <% end %>
+
     <% flash.each do |key, value| %>
       <%= value %>
     <% end %>
