--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BidSite</title>
+  <title><%= content_for?(:title) ? yield(:title) : "Bid Site" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,14 +9,22 @@
   </head>
 
   <body>
-    <%= link_to "Sign Up", new_user_registration_path %>
-    <% if user_signed_in? %>
-      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-    <% end %>
+    <nav class="top-bar">
+      <div class="top-bar-left">
+        <h1 class="menu-text">
+          <ul>
+          <%= link_to "Sign Up", new_user_registration_path %>
+          <% if user_signed_in? %>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          <% end %>
 
-    <% if !user_signed_in? %>
-      <%= link_to "Sign In", new_user_session_path %>
-    <% end %>
+          <% if !user_signed_in? %>
+            <%= link_to "Sign In", new_user_session_path %>
+          <% end %>
+          </ul>
+        </h1>
+      </div>
+    </nav>
 
     <% flash.each do |key, value| %>
       <%= value %>
