--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -1,5 +1,8 @@
-<h2> Auction Page </h2>
-
-<div id='app'>
-  application
+<div class="row">
+  <div class="small-10 columns">
+    <h2> Auction Page </h2>
+    <div id='app'>
+      application
+    </div>
+  </div>
 </div>
