--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,6 +5,12 @@ $base-blue: #3E606F;
 $base-deepblue: #193441;
 
 .top-bar {
-  background-image: linear-gradient( 0deg, $base-cream, $base-white )
+  background-image: linear-gradient( 0deg, $base-cream, $base-white );
+  color: $base-cream;
+  padding-left: 20px;
+  padding-right:  20px;
+}
 
+body{
+  background-color: $base-white;
 }
