--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-  <title><%= content_for?(:title) ? yield(:title) : "Bid Site" %></title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application' %>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= content_for?(:title) ? yield(:title) : "Bid Site" %></title>
+      <%= csrf_meta_tags %>
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
     <nav class="top-bar">
       <div class="top-bar-left">
         <h1 class="menu-text">
-          <ul>
-          <%= link_to "Sign Up", new_user_registration_path %>
-          <% if user_signed_in? %>
-            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-          <% end %>
-
-          <% if !user_signed_in? %>
-            <%= link_to "Sign In", new_user_session_path %>
-          <% end %>
-          </ul>
+          <%= link_to "Home", root_path %>
         </h1>
+        </div>
+          <ul>
+            <div class="top-bar-right">
+              <h3>
+              <% if user_signed_in? %>
+                <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+              <% end %>
+
+              <% if !user_signed_in? %>
+                <%= link_to "Sign In", new_user_session_path %>
+                <%= link_to "Sign Up", new_user_registration_path %>
+              <% end %>
+          </h3>
+          </ul>
       </div>
     </nav>
 
