Added description column, updated auction test, edited auction view

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -1,4 +1,5 @@
 Name: <%= @auction.name %>
 Location: <%= @auction.location %>
+Description: <%= @auction.description %>
 Start Date: <%= @auction.auction_start_date %>
 Close Date: <%= @auction.auction_close_date %>
