--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="small-10 columns index-body">
     <h2> Auction Page </h2>
+    <% if user_signed_in? %>
+      <%= link_to "Create Auction", new_auction_path %>
+    <% end %>
     <div id='app'>
       application
     </div>
