--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -5,3 +5,6 @@ Start Date: <%= @auction.auction_start_date %>
 Close Date: <%= @auction.auction_close_date %>
 
 <%= link_to "Submit New Bid", new_auction_bid_path(@auction) %>
+<% if current_user == @auction.user %>
+  <%= link_to "View Bids", auction_bids(@auction) %>
+<% end %>
