Minor fixes to controller, created bid index, added bid_id to auctions

--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -6,5 +6,5 @@ Close Date: <%= @auction.auction_close_date %>
 
 <%= link_to "Submit New Bid", new_auction_bid_path(@auction) %>
 <% if current_user == @auction.user %>
-  <%= link_to "View Bids", auction_bid_path(@auction) %>
+  <%= link_to "View Bids", auction_bids_path(@auction) %>
 <% end %>
