--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,7 +1,8 @@
 <ul>
 <% if !@bid.empty? %>
   <% @bid.each do |bid| %>
-  <li> Bid #<%=bid.index %>, Quote Price:<%= bid.bid_quote %> </li>
+  <li>Quote Price:<%= bid.bid_quote %> </li>
+  <%= button_to "Winning Bid", auction_bid_path(@auction.id, bid.id, bid: {winning_bid: true}), method: :put %>
   <% end %>
   <% else %>
   <p> You have no bids yet! </p>
