--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -19,6 +19,10 @@ $base-deepblue: #193441;
   margin-left: 200px;
 }
 
+#bid-show {
+  text-align: center;
+}
+
 .index-bottom-dividers {
   margin-left: fill;
   margin-right: 100px;
