--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -1,8 +1,12 @@
 <div class="row">
   <div class="small-10 columns index-body">
-    <h2> Auction Page </h2>
+    <br>
     <% if user_signed_in? %>
-      <%= link_to "Create Auction", new_auction_path %>
+    <div class="row">
+      <div class="small-2 small-centered">
+      <%= link_to "Create Auction", new_auction_path, class: "button secondary" %>
+      </div>
+    </div>
     <% end %>
     <div id='app'>
       application
