--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <nav class="top-bar">
       <div class="top-bar-left">
         <h1 class="menu-text">
-          <%= link_to "Home", root_path %>
+            <%= link_to (image_tag("OpenBidLogo.png")), root_path %>
         </h1>
         </div>
           <ul>
