update bids controller

--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -3,17 +3,16 @@
     <div class="small-6 small-centered columns" id="bid-show">
       <ul>
       <% if !@bid.empty? %>
-        <% counter = 0 %>
+      <% counter = 0 %>
         <% @bid.each do |bid| %>
           <% if bid.winning_bid == true %>
             <h2> Winning Quote: $<%= bid.bid_quote %> </h2>
-              An email has been sent to <%= current_user.email %> to contact winning party
+              An Email has been sent to <%= current_user.email %> to contact winning party
               <% counter = counter + 1 %>
-          <% elsif bid.winning_bid == false && counter < 0 %>
+          <% elsif bid.winning_bid == false && counter < 1 %>
             <h4> Quote Price: <%= bid.bid_quote %> </h4>
             <%= button_to "Select Winner", auction_bid_select_winner_path(@auction, bid.id), method: :put, class: "button alert" %>
             <hr>
-
             <% end %>
           <% end %>
         <% else %>
