--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -3,19 +3,17 @@
     <div class="small-6 small-centered columns" id="bid-show">
       <ul>
       <% if !@bid.empty? %>
-      <% counter = 0 %>
-        <% @bid.each do |bid| %>
-          <% if bid.winning_bid == true %>
-            <h2> Winning Quote: $<%= bid.bid_quote %> </h2>
-              An Email has been sent to <%= current_user.email %> to contact winning party
-              <% counter = counter + 1 %>
-          <% elsif bid.winning_bid == false && counter < 1 %>
-            <h4> Quote Price: <%= bid.bid_quote %> </h4>
-            <%= button_to "Select Winner", auction_bid_select_winner_path(@auction, bid.id), method: :put, class: "button alert" %>
-            <hr>
+        <% if @winner %>
+          <h2> Winning Quote: $<%= @winner.bid_quote %> </h2>
+          An Email has been sent to <%= current_user.email %> to contact winning party
+        <% else %>
+          <% @bid.each do |bid| %>
+              <h4> Quote Price: <%= bid.bid_quote %> </h4>
+              <%= button_to "Select Winner", auction_bid_select_winner_path(@auction, bid.id), method: :put, class: "button alert" %>
+              <hr>
             <% end %>
           <% end %>
-        <% else %>
+      <% else %>
         <p> You have no bids yet! </p>
       <% end %>
       </ul>
