--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -69,7 +69,16 @@ $base-deepblue: #193441;
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
 }
+// Sign In
+.signin {
+  padding: 100px;
+  background-image: linear-gradient( -180deg, $base-cream, $base-white 70%);
+}
 
+//New User
+.newuser {
+  background-image: linear-gradient( -180deg, $base-cream, $base-white 70%);
+}
 // Flash
 .flash {
   padding: 10px 10px 10px 10px;
