--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,50 +1,53 @@
-<h2>Sign up</h2>
+<div class="callout newuser">  
+  <div class="row">
+    <div class="small-8 small-centered columns">
+      <h2>Create Your Open Bid Account</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
+        <div class="field">
+          <%= f.label :company_name, "Company Name" %><br />
+          <%= f.text_field :company_name, autofocus: true %>
+        </div>
 
-  <div class="field">
-    <%= f.label :company_name, "Company Name" %><br />
-    <%= f.text_field :company_name, autofocus: true %>
+        <div class="field">
+          <%= f.label :contact_first_name, "Primary Contact First Name" %><br />
+          <%= f.text_field :contact_first_name, autofocus: true %>
+        </div>
+
+        <div class="field">
+          <%= f.label :contact_last_name, "Primary Contact Last Name" %><br />
+          <%= f.text_field :contact_last_name, autofocus: true %>
+        </div>
+
+        <div class="field">
+          <%= f.label :company_website, "Company Website" %><br />
+          <%= f.text_field :company_website, autofocus: true %>
+        </div>
+
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "off" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, "Password Confirmation" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Sign Up", :class => "button" %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :contact_first_name, "Primary Contact First Name" %><br />
-    <%= f.text_field :contact_first_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :contact_last_name, "Primary Contact Last Name" %><br />
-    <%= f.text_field :contact_last_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :company_website, "Company Website" %><br />
-    <%= f.text_field :company_website, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Password Confirmation" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign Up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
