--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -75,9 +75,28 @@ $base-deepblue: #193441;
   background-image: linear-gradient( -180deg, $base-cream, $base-white 70%);
 }
 
+//New bid
+
+.newbid {
+padding-top: 100px;
+text-align: center;
+}
 //New User
 .newuser {
   background-image: linear-gradient( -180deg, $base-cream, $base-white 70%);
+  h2{
+    text-align: center;
+  }
+  hr{
+     border:none;
+     height: 20px;
+     width: 90%;
+     height: 50px;
+     margin-top: 0;
+     border-bottom: 1px solid #1f1209;
+     box-shadow: 0 20px 20px -20px #333;
+     margin: -50px auto 10px;
+  }
 }
 // Flash
 .flash {
@@ -94,7 +113,16 @@ $base-deepblue: #193441;
     from {background-color: #91AA9D;}
     to {background-color: #3E606F;}
 }
-
+hr{
+  border:none;
+ height: 20px;
+ width: 90%;
+ height: 50px;
+ margin-top: 0;
+ border-bottom: 1px solid #1f1209;
+ box-shadow: 0 10px 10px -10px #333;
+ margin: -50px auto 10px;
+}
 body{
   font-family: 'Ubuntu', sans-serif;
   background-color: $base-white;
