--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,7 +1,13 @@
-<%= form_for [@auction, @bid] do |f| %>
-  <%= f.label :bid_quote, "Quote Price" %>
-  <%= f.number_field :bid_quote %>
+<div class="row">
+  <div class="small-6 small-centered newbid">
 
-  <%= f.submit "Submit Bid" %>
+    <%= form_for [@auction, @bid] do |f| %>
+    <h3> <%= f.label :bid_quote, "Enter Your Quote Price" %> </h3>
+      <%= f.number_field :bid_quote %>
 
-<% end %>
+      <%= f.submit "Submit Bid", :class => "button alert" %>
+
+      <% end %>
+
+  </div>
+</div>
