--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
-<div class="callout newuser">  
+<div class="callout newuser">
   <div class="row">
     <div class="small-8 small-centered columns">
-      <h2>Create Your Open Bid Account</h2>
+      <h2>Start Your OpenBid Account</h2>
+      <hr>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
