Styled Bid show page, Auction Index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,11 +23,16 @@ $base-deepblue: #193441;
   margin-top: 10px;
 }
 
-.call-out{
-}
+//Bid Show Page
 
-#bid-show {
+.indexshow{
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.bidshow {
+  text-align: center;
+  position: relative;
 }
 // Auction Index
 
@@ -39,25 +44,7 @@ $base-deepblue: #193441;
 
 .index-body {
   padding-left: 115px;
-  h2 {
-    font-family: "Ubuntu", sans-serif;
-    color: red;
-  }
 }
-
-.right-divider {
-  h2 {
-    text-align: center;
-  }
-  background-color: $base-blue;
-}
-.left-divider {
-  h2 {
-    text-align: center;
-  }
-  background-color: $base-teal
-}
-
 .index-body {
   h2 {
     text-align: center;
@@ -69,6 +56,21 @@ $base-deepblue: #193441;
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
 }
+//Auction Index Bottom Bar
+.right-divider {
+  h2 {
+    text-align: center;
+  }
+  background-color: $base-blue;
+  width: 50%;
+}
+.left-divider {
+  h2 {
+    text-align: center;
+  }
+  background-color: $base-teal
+}
+
 // Sign In
 .signin {
   padding: 100px;
@@ -113,6 +115,7 @@ text-align: center;
     from {background-color: #91AA9D;}
     to {background-color: #3E606F;}
 }
+//Header
 hr{
   border:none;
  height: 20px;
@@ -123,6 +126,7 @@ hr{
  box-shadow: 0 10px 10px -10px #333;
  margin: -50px auto 10px;
 }
+//Body
 body{
   font-family: 'Ubuntu', sans-serif;
   background-color: $base-white;
