Small css change

--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,6 +1,6 @@
 <div class="callout">
   <div class="row">
-    <div class="small-6 small-centered columns" id="bid-show">
+    <div class="small-6 small-centered columns bidshow">
       <ul>
       <% if !@bid.empty? %>
         <% if @winner %>
