--- a/app/views/user_mailer/winning_bid_selected.text.erb
+++ b/app/views/user_mailer/winning_bid_selected.text.erb
@@ -1,4 +1,4 @@
-Congratulations! Your bid on <%= @auciton.name %> has been selected.
+Congratulations! Your bid on <%= @auction.name %> has been selected.
 
 The contact information for your auctioneer is:
 
