--- a/app/views/bids/index.html.erb
+++ b/app/views/bids/index.html.erb
@@ -1,6 +1,8 @@
 <div class="callout">
   <div class="row">
     <div class="small-6 small-centered columns bidshow">
+      <h3>Bids for <%= @auction.name %> </h3>
+      <br>
       <ul>
       <% if !@bid.empty? %>
         <% if @winner %>
