--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -134,3 +134,23 @@ body{
   font-family: 'Ubuntu', sans-serif;
   background-color: $base-white;
 }
+//Pagination
+.pagination {
+  clear: both;
+  position: relative;
+  text-align: center;
+  li {
+    background-color: $base-white;
+    border: 2px solid $base-blue;
+    min-width: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+    &:hover {
+      background-color: $base-blue;
+    }
+    &:current{
+      background-color: $base-blue 50%;
+    }
+  }
+}
