--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -54,7 +54,11 @@ $accent-blue: #3D636F;
   border-style: none;
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1);
   &:hover{
-    background-color: $base-cream;
+    background-color: $base-blue;
+    color: white;
+    a {
+      color: white;
+    }
   }
 }
 
@@ -62,7 +66,10 @@ $accent-blue: #3D636F;
   background: #e0e0e0;
   box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1);
   &:hover{
-    background-color: $base-cream;
+    background-color: $base-blue;
+    a {
+      color: white;
+    }
   }
 }
 .index-body {
