--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -21,15 +21,10 @@
   </div>
 </div>
 
-    <div class="medium-6 columns left-divider">
-      <h2>Contact</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-    </div>
-    <div class="medium-6 columns right-divider">
+
+    <div class="medium-12 columns right-divider">
       <h2>About</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        OpenBid is an anonymous bid site for contractors searching for RFPs (Request for Proposals). The aim of OpenBid is to stop discrimination within the bid selection process. The site makes use of anonymity during all parts of the auction process. No information is ever shared between parties until a winning bid is designated by the auctioneer, only then do both parties recieve an email stating eachother's contact information. OpenBid hopes to achieve a more free and open bid process to allow for an unbiased and competitive bid process. Happy bidding!
       </p>
     </div>
